# DataPulse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  etl-earthquakes.yml  etl-volcanoes.yml
api/: __init__.py  config.py  db.py  main.py  queries.py  schemas.py
api/tests/: conftest.py  test_api.py  test_schemas.py  test_smoke.py
db/: README.md  __init__.py  alembic.ini  models.py
db/migrations/: README  env.py
db/migrations/versions/: 0001_initial_events_schema.py
db/tests/: test_schema.py
docs/: PIANO_SVILUPPO.md  PROGRESS.md  SCHEMA_EVENTI.md
etl/: __init__.py  config.py  db.py  gvp.py  logging_setup.py  normalize.py  usgs.py
etl/jobs/: __init__.py  earthquakes.py  volcanoes.py
etl/tests/: test_normalize.py  test_normalize_gvp.py  test_smoke.py
etl/tests/fixtures/: gvp_weekly_sample.xml  usgs_sample.geojson
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/textures/: README.md
web/src/: App.tsx  index.ts  main.tsx  smoke.test.ts  styles.css  theme.ts  types.ts
web/src/lib/: geo.test.ts  geo.ts
web/src/store/: useStore.ts
web/src/three/: Atmosphere.tsx  Globe.tsx  Scene.tsx  shaders.ts
